force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Country__c.field-meta.xml
<CustomField>
    <fullName>Deal_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>