force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Description__c.field-meta.xml
<CustomField>
    <fullName>Deal_Description__c</fullName>
    <description>Specific to EU who wants character limit.</description>
    <label>Deal Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>