force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Flow_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Flow_Status__c</fullName>
    <label>Deal Flow Status</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>