force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Deal ID (18 char)</label>
    <type>Text</type>
</CustomField>