force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Note_Holder__c.field-meta.xml
<CustomField>
    <fullName>Deal_Note_Holder__c</fullName>
    <inlineHelpText>Temporary holder for deal notes. Do not display on layout.</inlineHelpText>
    <label>Deal Note Holder</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>