force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Note_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Note_Status__c</fullName>
    <formula>&quot;Status&quot;</formula>
    <label>Deal Note Status</label>
    <type>Text</type>
</CustomField>