force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Offices__c.field-meta.xml
<CustomField>
    <fullName>Deal_Offices__c</fullName>
    <label>Deal Offices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>