force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Progress_REEquity__c.field-meta.xml
<CustomField>
    <fullName>Deal_Progress_REEquity__c</fullName>
    <description>PR-2442</description>
    <label>Deal Progress</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>Exchanged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>