force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Size_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size_Date__c</fullName>
    <label>Deal Size Date</label>
    <type>Date</type>
</CustomField>