force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Size_Description__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size_Description__c</fullName>
    <label>Deal Size Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>