force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Size_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size_Reporting__c</fullName>
    <formula>IF( OR( DSlo__c&lt;1000, DShi__c&lt;1000),
(IF( AND( ISNULL( DSlo__c ) , ISNULL( DShi__c ) ) , &quot;TBD&quot; , 
IF( DSlo__c = DShi__c , TEXT( DsCur__c ) + &quot; &quot; + TEXT( DSHigh_Reporting__c ) + &quot; MM&quot;, 
IF( AND( ISNULL( DSlo__c ) , NOT( ISNULL( DShi__c ) ) ) , TEXT( DsCur__c ) + &quot; &quot; + TEXT( DSHigh_Reporting__c ) + &quot; MM&quot; , 
IF( AND( NOT( ISNULL( DSlo__c ) ) , ISNULL( DShi__c ) ) , TEXT( DsCur__c ) + &quot; &quot; + TEXT( DSL_Reporting__c ) + &quot; MM&quot; , TEXT( DsCur__c ) + &quot; &quot; + TEXT( DSL_Reporting__c ) + &quot; - &quot; + TEXT( DSHigh_Reporting__c ) + &quot; MM&quot; ) ) ))) ,

(IF( AND( ISNULL( DSlo__c ) , ISNULL( DShi__c ) ) , &quot;TBD&quot; , 
IF( DSlo__c = DShi__c , TEXT( DsCur__c ) + &quot; &quot; + TEXT( DSHigh_Reporting__c ) + &quot; BN&quot;, 
IF( AND( ISNULL( DSlo__c ) , NOT( ISNULL( DShi__c ) ) ) , TEXT( DsCur__c ) + &quot; &quot; + TEXT( DSHigh_Reporting__c ) + &quot; BN&quot; , 
IF( AND( NOT( ISNULL( DSlo__c ) ) , ISNULL( DShi__c ) ) , TEXT( DsCur__c ) + &quot; &quot; + TEXT( DSL_Reporting__c ) + &quot; BN&quot; , TEXT( DsCur__c ) + &quot; &quot; + TEXT( DSL_Reporting__c ) + &quot; - &quot; + TEXT( DSHigh_Reporting__c ) + &quot; BN&quot; ) ) ))))

+ IF ( isblank( Deal_Size_Description__c ),null,&quot; (&quot;+Deal_Size_Description__c + &quot;)&quot;)</formula>
    <label>Deal Size (Reporting)</label>
    <type>Text</type>
</CustomField>