force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Deal_Stage__c</fullName>
    <label>Deal Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Early Diligence</fullName>
            </value>
            <value>
                <fullName>First Round Bids</fullName>
            </value>
            <value>
                <fullName>Binding Bids</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Portfolio</fullName>
            </value>
            <value>
                <fullName>Eliminated</fullName>
            </value>
            <value>
                <fullName>Ex-Portfolio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>