force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Stage_when_Eliminated__c.field-meta.xml
<CustomField>
    <fullName>Deal_Stage_when_Eliminated__c</fullName>
    <label>Deal Stage when Eliminated</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Deal_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missed</fullName>
            </value>
            <value>
                <fullName>Quick Pass</fullName>
            </value>
            <value>
                <fullName>Early Diligence</fullName>
            </value>
            <value>
                <fullName>First Round Bids</fullName>
            </value>
            <value>
                <fullName>Binding Bids</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>