force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Team_Analysts_Associates__c.field-meta.xml
<CustomField>
    <fullName>Deal_Team_Analysts_Associates__c</fullName>
    <label>Deal Team (Analysts &amp; Associates)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>