force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Team_Contact_Initials__c.field-meta.xml
<CustomField>
    <fullName>Deal_Team_Contact_Initials__c</fullName>
    <formula>DC__r.Initials__c</formula>
    <label>Deal Team Contact (Initials)</label>
    <type>Text</type>
</CustomField>