force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Team_Contact_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Deal_Team_Contact_Reporting__c</fullName>
    <formula>DC__r.FirstName + &quot; &quot; + DC__r.LastName</formula>
    <label>Deal Team Contact (Reporting)</label>
    <type>Text</type>
</CustomField>