force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Team_Emails__c.field-meta.xml
<CustomField>
    <fullName>Deal_Team_Emails__c</fullName>
    <description>Used with Trigger Rollup Rule - Project_TeamEmails</description>
    <label>Deal Team Emails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>