force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Team_Industry_Codes__c.field-meta.xml
<CustomField>
    <fullName>Deal_Team_Industry_Codes__c</fullName>
    <label>Deal Team Industry Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>