force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Team_Japan__c.field-meta.xml
<CustomField>
    <fullName>Deal_Team_Japan__c</fullName>
    <label>Deal Team (Japan)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>