force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Team_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Deal_Team_Member_Count__c</fullName>
    <label>Deal Team Member Count</label>
    <summaryForeignKey>CT_PE__Project_Team_Member__c.CT_PE__Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>