force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Team_Member_Territories_Ree__c.field-meta.xml
<CustomField>
    <fullName>Deal_Team_Member_Territories_Ree__c</fullName>
    <description>Roll up from Deal Team Members to list the territories of the deal team members</description>
    <label>Deal Team Member Territories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>