force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Team_Outlook__c.field-meta.xml
<CustomField>
    <fullName>Deal_Team_Outlook__c</fullName>
    <label>Company Outlook</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>