force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Team_Previous__c.field-meta.xml
<CustomField>
    <fullName>Deal_Team_Previous__c</fullName>
    <description>used for Deal Team coverage change notification</description>
    <label>Deal Team (Previous)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>