force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Type_Common__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type_Common__c</fullName>
    <formula>IF(TEXT(Transaction_Type__c) != &quot;&quot;, TEXT(Transaction_Type__c),
IF(TEXT(Deal_Type_Ind__c)!= &quot;&quot;, TEXT(Deal_Type_Ind__c),
IF(TEXT(Deal_TypeEU__c) != &quot;&quot;, TEXT(Deal_TypeEU__c),
IF(TEXT(DT_RE__c) != &quot;&quot;, TEXT(DT_RE__c),
IF(TEXT(Deal_TypeAsia__c)!= &quot;&quot;,TEXT( Deal_TypeAsia__c),
IF(Deal_Type_Infra__c!= &quot;&quot;,Deal_Type_Infra__c,
IF(TEXT(Deal_Type__c)!= &quot;&quot;,TEXT( Deal_Type__c),&quot;&quot;
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Type (Common)</label>
    <type>Text</type>
</CustomField>