force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Type_Ind__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type_Ind__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Large Cap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>