force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Type_Infra__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type_Infra__c</fullName>
    <formula>SUBSTITUTE( 
IF(INCLUDES(Type_Infra__c, &quot;Mgmt. Team&quot;), &quot;Mgmt. Team; &quot;, NULL) + 
IF(INCLUDES(Type_Infra__c, &quot;Corporate&quot;), &quot;Corporate; &quot;, NULL) + 
IF(INCLUDES(Type_Infra__c, &quot;Take-Private&quot;), &quot;Take-Private; &quot;, NULL) + 
IF(INCLUDES(Type_Infra__c, &quot;Asset Deal&quot;), &quot;Asset Deal; &quot;, NULL) + 
IF(INCLUDES(Type_Infra__c, &quot;Partnership&quot;), &quot;Partnership; &quot;, NULL) + 
IF(INCLUDES(Type_Infra__c, &quot;Minority&quot;), &quot;Minority; &quot;, NULL) + 
IF(INCLUDES(Type_Infra__c, &quot;Platform&quot;), &quot;Platform; &quot;, NULL) + 
IF(INCLUDES(Type_Infra__c, &quot;Project&quot;), &quot;Project; &quot;, NULL) + 
IF(INCLUDES(Type_Infra__c, &quot;Structured&quot;), &quot;Structured; &quot;, NULL) + 
IF(INCLUDES(Type_Infra__c, &quot;Add-On&quot;), &quot;Add-On; &quot;, NULL) + 
IF(INCLUDES(Type_Infra__c, &quot;TBD&quot;), &quot;TBD; &quot;, NULL) + &quot;.&quot;, &quot;; .&quot;, NULL)</formula>
    <label>Deal Type (Infra)</label>
    <type>Text</type>
</CustomField>