force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_TypeAsia__c.field-meta.xml
<CustomField>
    <fullName>Deal_TypeAsia__c</fullName>
    <description>specific for Asia configuration</description>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P2P</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Tertiary</fullName>
            </value>
            <value>
                <fullName>Private Minority</fullName>
            </value>
            <value>
                <fullName>Public Minority</fullName>
            </value>
            <value>
                <fullName>Corporate Divesture</fullName>
            </value>
            <value>
                <fullName>Corporate Tech Transformation</fullName>
            </value>
            <value>
                <fullName>Private Sale</fullName>
            </value>
            <value>
                <fullName>Portfolio Add On</fullName>
            </value>
            <value>
                <fullName>Portfolio Follow On</fullName>
            </value>
            <value>
                <fullName>Joint Venture</fullName>
            </value>
            <value>
                <fullName>Non-Equity Investment</fullName>
            </value>
            <value>
                <fullName>Preferred Equity</fullName>
            </value>
            <value>
                <fullName>Buyout</fullName>
            </value>
            <value>
                <fullName>Majority</fullName>
            </value>
            <value>
                <fullName>Seed</fullName>
            </value>
            <value>
                <fullName>Series A</fullName>
            </value>
            <value>
                <fullName>Series B</fullName>
            </value>
            <value>
                <fullName>Series C</fullName>
            </value>
            <value>
                <fullName>Series D</fullName>
            </value>
            <value>
                <fullName>Series E</fullName>
            </value>
            <value>
                <fullName>Series F</fullName>
            </value>
            <value>
                <fullName>Series G</fullName>
            </value>
            <value>
                <fullName>Series H</fullName>
            </value>
            <value>
                <fullName>Series I</fullName>
            </value>
            <value>
                <fullName>Later Stage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>