force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_TypeEU__c.field-meta.xml
<CustomField>
    <fullName>Deal_TypeEU__c</fullName>
    <description>for EU configuration</description>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carve-out</fullName>
            </value>
            <value>
                <fullName>Toehold / P2P</fullName>
            </value>
            <value>
                <fullName>Add-On</fullName>
            </value>
            <value>
                <fullName>Buyout</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Private Minority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>