force-app/main/default/objects/Deal_Clone_One__c/fields/Debt_Broker_Other_REE__c.field-meta.xml
<CustomField>
    <fullName>Debt_Broker_Other_REE__c</fullName>
    <label>Debt Broker (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>