force-app/main/default/objects/Deal_Clone_One__c/fields/Debt_Broker_REE__c.field-meta.xml
<CustomField>
    <fullName>Debt_Broker_REE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Debt Broker</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must have Type = Broker</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deals (Debt Broker)</relationshipLabel>
    <relationshipName>Debt_Broker_REE</relationshipName>
    <type>Lookup</type>
</CustomField>