force-app/main/default/objects/Deal_Clone_One__c/fields/Debt_Broker_REEV2__c.field-meta.xml
<CustomField>
    <fullName>Debt_Broker_REEV2__c</fullName>
    <label>Debt Broker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KCM</fullName>
            </value>
            <value>
                <fullName>CBRE</fullName>
            </value>
            <value>
                <fullName>Eastdil Secured</fullName>
            </value>
            <value>
                <fullName>JLL</fullName>
            </value>
            <value>
                <fullName>NKF</fullName>
            </value>
            <value>
                <fullName>UBS</fullName>
            </value>
            <value>
                <fullName>Walker &amp; Dunlop</fullName>
            </value>
            <value>
                <fullName>IPA</fullName>
            </value>
            <value>
                <fullName>Cushman &amp; Wakefield</fullName>
            </value>
            <value>
                <fullName>Berkadia</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>