force-app/main/default/objects/Deal_Clone_One__c/fields/Debt_Quantum_REE__c.field-meta.xml
<CustomField>
    <fullName>Debt_Quantum_REE__c</fullName>
    <label>Debt Quantum (MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>