force-app/main/default/objects/Deal_Clone_One__c/fields/Debt_Yield_REE__c.field-meta.xml
<CustomField>
    <fullName>Debt_Yield_REE__c</fullName>
    <label>Debt Yield</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>