force-app/main/default/objects/Deal_Clone_One__c/fields/Delta_Deal_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Delta_Deal_Signed_Date__c</fullName>
    <description>used for delta popup, tracks date time when a deal is signed</description>
    <label>Delta - Deal Signed Date</label>
    <type>DateTime</type>
</CustomField>