force-app/main/default/objects/Deal_Clone_One__c/fields/Desc_Eur__c.field-meta.xml
<CustomField>
    <fullName>Desc_Eur__c</fullName>
    <label>Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>