force-app/main/default/objects/Deal_Clone_One__c/fields/Description_100_HC__c.field-meta.xml
<CustomField>
    <fullName>Description_100_HC__c</fullName>
    <description>used by HC (no workflow rules should be attached here)</description>
    <label>Description (Max 100 Characters)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>