force-app/main/default/objects/Deal_Clone_One__c/fields/Description_BOT_Redacted__c.field-meta.xml
<CustomField>
    <fullName>Description_BOT_Redacted__c</fullName>
    <description>Field that Bot will use to populate the Description from the Redaction sheet</description>
    <label>Description BOT(Redacted)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>