force-app/main/default/objects/Deal_Clone_One__c/fields/Description_Date__c.field-meta.xml
<CustomField>
    <fullName>Description_Date__c</fullName>
    <label>Description Date</label>
    <type>Date</type>
</CustomField>