force-app/main/default/objects/Deal_Clone_One__c/fields/Description_HTML__c.field-meta.xml
<CustomField>
    <fullName>Description_HTML__c</fullName>
    <label>Description (HTML)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>