force-app/main/default/objects/Deal_Clone_One__c/fields/Description_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Description_Portfolio__c</fullName>
    <description>for REE Asia V2</description>
    <label>Description (Portfolio)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>