force-app/main/default/objects/Deal_Clone_One__c/fields/Description_Redacted__c.field-meta.xml
<CustomField>
    <fullName>Description_Redacted__c</fullName>
    <label>Description (Redacted)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>