force-app/main/default/objects/Deal_Clone_One__c/fields/Description_Short__c.field-meta.xml
<CustomField>
    <fullName>Description_Short__c</fullName>
    <label>Description (Short)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>