force-app/main/default/objects/Deal_Clone_One__c/fields/Direct_Equity__c.field-meta.xml
<CustomField>
    <fullName>Direct_Equity__c</fullName>
    <label>Direct Equity</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>