force-app/main/default/objects/Deal_Clone_One__c/fields/Direct_Lending_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Direct_Lending_Reporting__c</fullName>
    <formula>IF( ISNULL ( LS__c ) , null , TEXT( CurrencyIsoCode ) + &quot; &quot; + TEXT ( LS__c ) + &quot; MM&quot; + &quot;/&quot; ) &amp;
IF( ISNULL ( TF__c ) , &quot; &quot; , TF__c + &quot;/&quot;) &amp;
IF( ISNULL ( TA__c ) , &quot; &quot; , TEXT ( TA__c ) + &quot;%&quot;) + IF( ISNULL ( PE__c ), null , &quot;/&quot;)  &amp;
IF( ISNULL ( PE__c ) , null , TEXT( CurrencyIsoCode ) + &quot; &quot; + TEXT ( PE__c ) + &quot; MM&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Lending (Reporting)</label>
    <type>Text</type>
</CustomField>