force-app/main/default/objects/Deal_Clone_One__c/fields/Direct_Lending_Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>Direct_Lending_Reporting_Date__c</fullName>
    <label>Direct Lending Reporting Date</label>
    <type>Date</type>
</CustomField>