force-app/main/default/objects/Deal_Clone_One__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <inlineHelpText>This name will appear on the weekly TMT tracker</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>