force-app/main/default/objects/Deal_Clone_One__c/fields/DLA__c.field-meta.xml
<CustomField>
    <fullName>DLA__c</fullName>
    <label>Deepest Level of Analysis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Screened</fullName>
            </value>
            <value>
                <fullName>Full Analysis</fullName>
            </value>
            <value>
                <fullName>IC</fullName>
            </value>
            <value>
                <fullName>IC / Bid</fullName>
            </value>
            <value>
                <fullName>Bid</fullName>
            </value>
            <value>
                <fullName>Transacted</fullName>
            </value>
            <value>
                <fullName>Portfolio</fullName>
            </value>
            <value>
                <fullName>Ex-Portfolio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>