force-app/main/default/objects/Deal_Clone_One__c/fields/DocumentsURL__c.field-meta.xml
<CustomField>
    <fullName>DocumentsURL__c</fullName>
    <formula>&apos;https://polarisext.kkr.com/companies/&apos; &amp;  CASESAFEID(Id)  &amp; &apos;/polaris&apos;</formula>
    <label>Documents</label>
    <type>Text</type>
</CustomField>