force-app/main/default/objects/Deal_Clone_One__c/fields/DS_Coversheet_REE__c.field-meta.xml
<CustomField>
    <fullName>DS_Coversheet_REE__c</fullName>
    <formula>IF( OR( DSlo__c&lt;1000, DShi__c&lt;1000),
(IF( AND( ISNULL( DSlo__c ) , ISNULL( DShi__c ) ) , &quot;TBD&quot; , 
IF( DSlo__c = DShi__c , TEXT( DsCur__c ) + &quot; &quot; + TEXT( DSHigh_Reporting__c ) + &quot; MM&quot;, 
IF( AND( ISNULL( DSlo__c ) , NOT( ISNULL( DShi__c ) ) ) , TEXT( DsCur__c ) + &quot; &quot; + TEXT( DSHigh_Reporting__c ) + &quot; MM&quot; , 
IF( AND( NOT( ISNULL( DSlo__c ) ) , ISNULL( DShi__c ) ) , TEXT( DsCur__c ) + &quot; &quot; + TEXT( DSL_Reporting__c ) + &quot; MM&quot; , TEXT( DsCur__c ) + &quot; &quot; + TEXT( DSL_Reporting__c ) + &quot; - &quot; + TEXT( DSHigh_Reporting__c ) + &quot; MM&quot; ) ) ))) ,

(IF( AND( ISNULL( DSlo__c ) , ISNULL( DShi__c ) ) , &quot;TBD&quot; , 
IF( DSlo__c = DShi__c , TEXT( DsCur__c ) + &quot; &quot; + TEXT( DSHigh_Reporting__c ) + &quot; BN&quot;, 
IF( AND( ISNULL( DSlo__c ) , NOT( ISNULL( DShi__c ) ) ) , TEXT( DsCur__c ) + &quot; &quot; + TEXT( DSHigh_Reporting__c ) + &quot; BN&quot; , 
IF( AND( NOT( ISNULL( DSlo__c ) ) , ISNULL( DShi__c ) ) , TEXT( DsCur__c ) + &quot; &quot; + TEXT( DSL_Reporting__c ) + &quot; BN&quot; , TEXT( DsCur__c ) + &quot; &quot; + TEXT( DSL_Reporting__c ) + &quot; - &quot; + TEXT( DSHigh_Reporting__c ) + &quot; BN&quot; ) ) ))))</formula>
    <label>DS Coversheet REE</label>
    <type>Text</type>
</CustomField>