force-app/main/default/objects/Deal_Clone_One__c/fields/DS_RE_Report__c.field-meta.xml
<CustomField>
    <fullName>DS_RE_Report__c</fullName>
    <formula>IF(
				AND(
								OR(
												RecordType.Name = &apos;Real Estate Equity V2&apos;,
												AND(
																RecordType.Name = &apos;Platform Deal&apos;,
																TEXT(Platform_Details__c) = &apos;Standalone Investment&apos;
																)		
								),
				    NOT(ISBLANK(Asking_Price_REE__c))
				    ),
			  &quot;USD &quot; + TEXT(Asking_Price_REE__c) + &quot; MM&quot;,
					 IF(
									AND(
													OR(
												    RecordType.Name = &apos;Real Estate Equity V2&apos;,
												    AND(
																    RecordType.Name = &apos;Platform Deal&apos;,
																    TEXT(Platform_Details__c) = &apos;Standalone Investment&apos;
																    )		
								        ),
													ISBLANK(Asking_Price_REE__c)
										),
							&quot;TBD&quot;,
 		     Deal_Size_Reporting__c
			     )
)</formula>
    <label>Deal Size REV2 Reporting</label>
    <type>Text</type>
</CustomField>