force-app/main/default/objects/Deal_Clone_One__c/fields/DSCR_REE__c.field-meta.xml
<CustomField>
    <fullName>DSCR_REE__c</fullName>
    <label>DSCR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>