force-app/main/default/objects/Deal_Clone_One__c/fields/DsCur__c.field-meta.xml
<CustomField>
    <fullName>DsCur__c</fullName>
    <label>Currency (Deal Size)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>