force-app/main/default/objects/Deal_Clone_One__c/fields/DShi__c.field-meta.xml
<CustomField>
    <fullName>DShi__c</fullName>
    <label>Deal Size High (MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>