force-app/main/default/objects/Deal_Clone_One__c/fields/DSHigh_Reporting__c.field-meta.xml
<CustomField>
    <fullName>DSHigh_Reporting__c</fullName>
    <formula>IF (  DShi__c &gt;= 1000, DShi__c/1000, DShi__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Size High (Reporting)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>