force-app/main/default/objects/Deal_Clone_One__c/fields/DSL_Reporting__c.field-meta.xml
<CustomField>
    <fullName>DSL_Reporting__c</fullName>
    <formula>IF (  DSlo__c &gt;= 1000, DSlo__c/1000, DSlo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Size Low (Reporting)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>