force-app/main/default/objects/Deal_Clone_One__c/fields/DSlo__c.field-meta.xml
<CustomField>
    <fullName>DSlo__c</fullName>
    <label>Deal Size Low (MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>