force-app/main/default/objects/Deal_Clone_One__c/fields/DSN_Infra__c.field-meta.xml
<CustomField>
    <fullName>DSN_Infra__c</fullName>
    <label>Deal Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>