force-app/main/default/objects/Deal_Clone_One__c/fields/DT_RE__c.field-meta.xml
<CustomField>
    <fullName>DT_RE__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auction</fullName>
            </value>
            <value>
                <fullName>Buyout</fullName>
            </value>
            <value>
                <fullName>Corporate Divestiture</fullName>
            </value>
            <value>
                <fullName>Corporate Divesture</fullName>
            </value>
            <value>
                <fullName>Joint Venture</fullName>
            </value>
            <value>
                <fullName>Limited Auction</fullName>
            </value>
            <value>
                <fullName>Majority</fullName>
            </value>
            <value>
                <fullName>Non-Equity Investment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>P2P</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Portfolio Add On</fullName>
            </value>
            <value>
                <fullName>Preferred Equity</fullName>
            </value>
            <value>
                <fullName>Private Minority</fullName>
            </value>
            <value>
                <fullName>Private Sale</fullName>
            </value>
            <value>
                <fullName>Proprietary</fullName>
            </value>
            <value>
                <fullName>Public Minority</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Tertiary</fullName>
            </value>
            <value>
                <fullName>Single Asset</fullName>
            </value>
            <value>
                <fullName>Portfolio</fullName>
            </value>
            <value>
                <fullName>Structured Equity</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Securities</fullName>
            </value>
            <value>
                <fullName>Public to Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>